Refactor and enhance various components
- Changed the `CompileCommand` class to remove the transient modifier from the compiler field.
- Updated the `MavenCompiler` class to throw a `MisconfigurationException` if `MAVEN_HOME` is not set, and improved error handling during compilation.
- Added a new test case in `MavenCompilerTest` to verify behavior when compilation fails.
- Enhanced the `RemoteCompleter` class to handle empty responses and improve candidate suggestions.
- Modified the `JShellRepl` class to use a `ConcurrentHashMap` for background tasks and added methods for evaluating statements and registering local commands.
- Improved the `CompletionServer` class to correctly handle completion suggestions and anchors.
- Updated the `ReplTestClient` to handle empty replies gracefully.
- Added new methods to the `Repl` interface for evaluating statements and registering local commands.
- Refactored the `Throttle` class to use a synchronized map for buckets and added a default maximum bucket limit.
- Enhanced the `TokenBucket` class to simplify the refill logic.
- Updated tests in `ThrottlingMiddlewareTest` to cover various scenarios including IP-based throttling and null discriminators.
- Added new tests for the `StacktraceMiddleware` and `TraceWebMiddleware` to ensure proper error handling and response formatting.
- Introduced `EntityManagerInjectorTest` to validate the behavior of the `EntityManagerInjector` class.
- Added a new properties file for misconfiguration messages related to Maven setup.